--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
+    "react-image": "^4.1.0",
     "react-router-dom": "^7.5.3",
     "react-to-pdf": "^2.0.0",
     "recharts": "^2.15.3",
