--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-radio-group": "^1.3.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -34,6 +35,7 @@
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-image": "^4.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "react-to-pdf": "^2.0.0",
     "recharts": "^2.15.3",
@@ -44,10 +46,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@types/lodash": "^4.17.16",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
